// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test dark theme 1`] = `
{
  "--action-sheet-action-item-color": "#fff",
  "--action-sheet-background": "var(--color-surface-container-low)",
  "--action-sheet-title-color": "#aaa",
  "--app-bar-color": "#272727",
  "--avatar-background-color": "#303030",
  "--avatar-border": "2px solid #1e1e1e",
  "--badge-default-color": "#555",
  "--badge-default-text-color": "#fff",
  "--bottom-navigation-item-inactive-color": "#BFBFBF",
  "--breadcrumb-inactive-color": "#aaa",
  "--button-default-color": "#303030",
  "--button-default-icon-color": "#fff",
  "--button-default-icon-container-color": "#303030",
  "--button-default-text-color": "#fff",
  "--card-description-color": "#aaaaaa",
  "--card-subtitle-color": "#aaaaaa",
  "--card-title-color": "#ffffff",
  "--cell-description-color": "#aaa",
  "--checkbox-text-color": "#fff",
  "--checkbox-unchecked-color": "#fff",
  "--chip-default-color": "#555",
  "--chip-default-text-color": "#fff",
  "--collapse-text-color": "#fff",
  "--color-body": "#1e1e1e",
  "--color-danger": "#ef5350",
  "--color-danger-container": "#ef5350",
  "--color-disabled": "#404040",
  "--color-info": "#10afef",
  "--color-info-container": "#10afef",
  "--color-inverse-surface": "#fff",
  "--color-on-danger": "#fff",
  "--color-on-danger-container": "#fff",
  "--color-on-info": "#fff",
  "--color-on-info-container": "#fff",
  "--color-on-primary": "#fff",
  "--color-on-primary-container": "#fff",
  "--color-on-success": "#fff",
  "--color-on-success-container": "#fff",
  "--color-on-surface-variant": "#fff",
  "--color-on-warning": "#fff",
  "--color-on-warning-container": "#fff",
  "--color-outline": "rgba(255, 255, 255, 0.2)",
  "--color-primary": "#4a7afe",
  "--color-primary-container": "#4a7afe",
  "--color-success": "#10c48f",
  "--color-success-container": "#10c48f",
  "--color-surface-container": "#1e1e1e",
  "--color-surface-container-high": "#272727",
  "--color-surface-container-highest": "#303030",
  "--color-surface-container-low": "#1e1e1e",
  "--color-text": "#fff",
  "--color-text-disabled": "#757575",
  "--color-warning": "#ff8800",
  "--color-warning-container": "#ff8800",
  "--date-picker-body-background-color": "#303030",
  "--date-picker-header-color": "#fff",
  "--date-picker-main-color": "#fff",
  "--day-picker-head-item-color": "#aaaaaa",
  "--dialog-message-color": "#bbb",
  "--dialog-title-color": "#fff",
  "--divider-text-color": "#aaa",
  "--field-decorator-blur-color": "rgb(255, 255, 255, .7)",
  "--field-decorator-text-color": "#fff",
  "--link-default-color": "#fff",
  "--menu-background-color": "#272727",
  "--menu-option-text-color": "#fff",
  "--menu-select-menu-background-color": "#272727",
  "--option-text-color": "#fff",
  "--pagination-hover-bg-color": "rgba(255, 255, 255, .15)",
  "--pagination-item-background": "#303030",
  "--pagination-text-color": "#fff",
  "--picker-background": "#1e1e1e",
  "--picker-cancel-button-text-color": "#aaa",
  "--picker-mask-background-image": "linear-gradient(180deg, hsla(0, 0%, 12%, 0.9), hsla(0, 0%, 12%, 0.4)), linear-gradient(0deg, hsla(0, 0%, 12%, 0.9), hsla(0, 0%, 12%, 0.4))",
  "--picker-option-text-color": "#fff",
  "--picker-title-text-color": "#fff",
  "--popup-content-background-color": "var(--color-surface-container-low)",
  "--progress-label-color": "#fff",
  "--pull-refresh-background": "#303030",
  "--radio-text-color": "#fff",
  "--radio-unchecked-color": "#fff",
  "--result-background": "#303030",
  "--result-description-color": "#aaaaaa",
  "--result-empty-border-color": "rgba(232,229,229,0.3)",
  "--result-empty-color": "#adadad",
  "--result-question-border-color": "rgba(151,194,216,0.3)",
  "--result-question-color": "#7f8e96",
  "--result-title-color": "#ffffff",
  "--skeleton-animation-background": "linear-gradient(
        90deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.05),hsla(0,0%,100%,0))
      ",
  "--skeleton-avatar-background-color": "hsla(0,0%,100%,.12)",
  "--skeleton-card-background-color": "hsla(0,0%,100%,.12)",
  "--skeleton-title-background-color": "hsla(0,0%,100%,.12)",
  "--step-content-active-color": "#fff",
  "--step-content-color": "rgba(255, 255, 255, .38)",
  "--step-line-background": "#fff",
  "--switch-handle-background": "#727272",
  "--switch-track-background": "#727272",
  "--tab-inactive-color": "rgba(255, 255, 255, .65)",
  "--table-background": "#303030",
  "--table-tbody-td-text-color": "#fff",
  "--table-tbody-tr-hover-background": "#4c4b4b",
  "--table-thead-th-text-color": "rgba(255, 255, 255, 0.6)",
  "--tabs-background": "#1e1e1e",
  "--time-picker-body-background": "#303030",
  "--time-picker-clock-container-background": "#545454",
  "--time-picker-clock-item-disable-background": "#aaaaaa",
  "--time-picker-clock-item-disable-color": "#fff",
  "--time-picker-clock-item-text-color": "#fff",
  "--uploader-action-background": "#303030",
  "--uploader-action-icon-color": "#fff",
  "--uploader-file-cover-background": "#303030",
  "--uploader-file-name-background": "#303030",
  "--uploader-file-name-color": "#aaa",
  "--watermark-content-color": "#ffffff",
  "--year-picker-item-color": "#fff",
}
`;

exports[`test md3Dark theme 1`] = `
{
  "--action-sheet-action-item-color": "var(--color-inverse-surface)",
  "--action-sheet-background": "var(--color-surface-container-high)",
  "--action-sheet-border-radius": "0px",
  "--action-sheet-title-color": "var(--color-on-surface-variant)",
  "--app-bar-color": "#211F26",
  "--app-bar-text-color": "var(--color-inverse-surface)",
  "--avatar-background-color": "var(--color-primary)",
  "--avatar-text-color": "#000",
  "--back-top-button-border-radius": "12px",
  "--badge-default-color": "#3B383E",
  "--badge-default-text-color": "#fff",
  "--bottom-navigation-background-color": "var(--color-surface-container)",
  "--bottom-navigation-fab-border-radius": "12px",
  "--bottom-navigation-item-active-background-color": "#4A4458",
  "--bottom-navigation-item-inactive-color": "var(--color-on-surface-variant)",
  "--breadcrumb-inactive-color": "var(--color-on-surface-variant)",
  "--button-border-radius": "100px",
  "--button-default-color": "#3B383E",
  "--button-default-icon-color": "var(--color-on-surface-variant)",
  "--button-default-icon-container-color": "var(--color-surface-container-highest)",
  "--button-default-text-color": "var(--color-primary)",
  "--card-background": "var(--color-surface-container-highest)",
  "--card-border-radius": "12px",
  "--card-close-button-border-radius": "12px",
  "--card-close-button-primary-color": "var(--color-primary-container)",
  "--card-close-button-size": "56px",
  "--card-close-button-text-color": "var(--color-on-primary-container)",
  "--card-description-color": "var(--color-on-surface-variant)",
  "--card-description-margin": "32px 0 0 0",
  "--card-description-padding": "0 16px",
  "--card-footer-margin": "32px 0 0 0",
  "--card-footer-padding": "0 16px",
  "--card-image-height": "188px",
  "--card-padding": "0 0 16px 0",
  "--card-subtitle-color": "var(--color-on-surface-variant)",
  "--card-subtitle-margin": "4px 0 0 0",
  "--card-subtitle-padding": "0 16px",
  "--card-subtitle-row-margin": "4px 0 0 0",
  "--card-title-color": "var(--color-inverse-surface)",
  "--card-title-font-size": "16px",
  "--card-title-margin": "16px 0 0 0",
  "--card-title-padding": "0 16px",
  "--card-title-row-margin": "16px 0 0 0",
  "--cell-description-color": "var(--color-on-surface-variant)",
  "--checkbox-text-color": "var(--color-on-surface-variant)",
  "--checkbox-unchecked-color": "var(--color-on-surface-variant)",
  "--chip-default-color": "var(--color-surface-container-highest)",
  "--chip-default-text-color": "var(--color-on-surface-variant)",
  "--chip-round-radius": "8px",
  "--collapse-background": "var(--color-surface-container-highest)",
  "--collapse-text-color": "var(--color-inverse-surface)",
  "--color-body": "#141218",
  "--color-danger": "#F2B8B5",
  "--color-danger-container": "#9D3A37",
  "--color-disabled": "#404040",
  "--color-info": "#CCC2DC",
  "--color-info-container": "#575065",
  "--color-inverse-surface": "#e6e0e9",
  "--color-on-danger": "#601410",
  "--color-on-danger-container": "#F9DEDC",
  "--color-on-info": "#332D41",
  "--color-on-info-container": "#E8DEF8",
  "--color-on-primary": "#381E72",
  "--color-on-primary-container": "#EADDFF",
  "--color-on-success": "#273500",
  "--color-on-success-container": "#D5EC9C",
  "--color-on-surface-variant": "#CAC4D0",
  "--color-on-warning": "#492532",
  "--color-on-warning-container": "#FFD8E4",
  "--color-outline": "#49454F",
  "--color-primary": "#D0BCFF",
  "--color-primary-container": "#5B4494",
  "--color-success": "#BACF83",
  "--color-success-container": "#485A19",
  "--color-surface-container": "#211F26",
  "--color-surface-container-high": "#2B2930",
  "--color-surface-container-highest": "#36343B",
  "--color-surface-container-low": "#1D1B20",
  "--color-text": "#fff",
  "--color-text-disabled": "#757575",
  "--color-warning": "#EFB8C8",
  "--color-warning-container": "#6F4854",
  "--counter-button-text-color": "#3B383E",
  "--counter-font-color": "#3B383E",
  "--date-picker-actions-padding": "20px",
  "--date-picker-body-background-color": "var(--color-surface-container-high)",
  "--date-picker-body-height": "300px",
  "--date-picker-body-padding": "0 14px 16px",
  "--date-picker-border-radius": "20px",
  "--date-picker-header-arrow-filter": "opacity(1)",
  "--date-picker-header-color": "var(--color-on-surface-variant)",
  "--date-picker-header-padding": "0 0 16px",
  "--date-picker-main-color": "var(--color-inverse-surface)",
  "--date-picker-title-background": "var(--color-surface-container-high)",
  "--date-picker-title-color": "var(--color-inverse-surface)",
  "--date-picker-title-hint-color": "var(--color-on-surface-variant)",
  "--date-picker-title-padding": "20px 20px 16px",
  "--day-picker-head-item-color": "var(--color-inverse-surface)",
  "--dialog-actions-padding": "0 24px 24px",
  "--dialog-background": "var(--color-surface-container-high)",
  "--dialog-border-radius": "28px",
  "--dialog-button-margin-left": "8px",
  "--dialog-message-color": "var(--color-on-surface-variant)",
  "--dialog-message-padding": "16px 24px 24px",
  "--dialog-title-color": "var(--color-inverse-surface)",
  "--dialog-title-font-size": "20px",
  "--dialog-title-padding": "24px 24px 0",
  "--dialog-width": "312px",
  "--divider-text-color": "#aaa",
  "--fab-action-border-radius": "12px",
  "--fab-action-size": "40px",
  "--fab-trigger-border-radius": "16px",
  "--field-decorator-blur-color": "var(--color-on-surface-variant)",
  "--field-decorator-text-color": "var(--color-inverse-surface)",
  "--floating-panel-background": "var(--color-surface-container-low)",
  "--floating-panel-header-height": "36px",
  "--floating-panel-toolbar-background": "#938F99",
  "--floating-panel-toolbar-height": "4px",
  "--floating-panel-toolbar-width": "32px",
  "--hover-overlay-opacity": "0.12",
  "--link-default-color": "#fff",
  "--menu-background-color": "var(--color-surface-container)",
  "--menu-border-radius": "4px",
  "--menu-option-text-color": "var(--color-inverse-surface)",
  "--menu-select-menu-background-color": "var(--color-surface-container)",
  "--menu-select-menu-border-radius": "4px",
  "--option-text-color": "var(--color-inverse-surface)",
  "--pagination-item-background": "var(--color-surface-container)",
  "--pagination-text-color": "#fff",
  "--paper-background": "var(--color-surface-container-high)",
  "--picker-background": "var(--color-body)",
  "--picker-cancel-button-text-color": "var(--color-primary)",
  "--picker-mask-background-image": "linear-gradient(180deg, rgba(20, 18, 24, 0.9), rgba(20, 18, 24, 0.4)), linear-gradient(0deg, rgba(20, 18, 24, 0.9), rgba(20, 18, 24, 0.4))",
  "--picker-option-text-color": "#fff",
  "--picker-title-text-color": "#fff",
  "--popup-content-background-color": "var(--color-surface-container-high)",
  "--progress-label-color": "#fff",
  "--pull-refresh-background": "var(--color-surface-container-highest)",
  "--radio-text-color": "var(--color-on-surface-variant)",
  "--radio-unchecked-color": "var(--color-on-surface-variant)",
  "--rate-color": "var(--color-on-surface-variant)",
  "--result-background": "var(--color-surface-container-highest)",
  "--result-border-radius": "12px",
  "--result-description-color": "var(--color-on-surface-variant)",
  "--result-empty-border-color": "rgba(232,229,229,0.3)",
  "--result-empty-color": "#adadad",
  "--result-error-border-color": "rgba(242, 184, 181, 0.3)",
  "--result-info-border-color": "rgba(204, 194, 220, 0.3)",
  "--result-question-border-color": "rgba(151,194,216,0.3)",
  "--result-question-color": "#7f8e96",
  "--result-success-border-color": "rgba(186, 207, 131, 0.3)",
  "--result-title-color": "var(--color-inverse-surface)",
  "--result-warning-border-color": "rgba(239, 184, 200, 0.3)",
  "--select-scroller-background": "var(--color-surface-container)",
  "--select-scroller-border-radius": "4px",
  "--skeleton-animation-background": "linear-gradient(
        90deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.05),hsla(0,0%,100%,0))
      ",
  "--skeleton-avatar-background-color": "hsla(0,0%,100%,.12)",
  "--skeleton-card-background-color": "hsla(0,0%,100%,.12)",
  "--skeleton-title-background-color": "hsla(0,0%,100%,.12)",
  "--slider-thumb-size": "16px",
  "--slider-track-background": "var(--color-surface-container-highest)",
  "--slider-track-border-radius": "4px",
  "--slider-track-fill-border-radius": "4px",
  "--slider-track-height": "4px",
  "--snackbar-background": "var(--color-inverse-surface)",
  "--snackbar-color": "#322F35",
  "--step-content-active-color": "#fff",
  "--step-content-color": "rgba(255, 255, 255, .38)",
  "--step-line-background": "#fff",
  "--switch-handle-background": "#727272",
  "--switch-track-background": "#727272",
  "--tab-inactive-color": "var(--color-on-surface-variant)",
  "--table-background": "var(--color-surface-container-highest)",
  "--table-tbody-td-text-color": "#fff",
  "--table-tbody-tr-hover-background": "var(--color-surface-container-highest)",
  "--table-thead-th-text-color": "rgba(255, 255, 255, 0.6)",
  "--tabs-background": "var(--color-body)",
  "--time-picker-actions-padding": "20px",
  "--time-picker-body-background": "var(--color-surface-container-high)",
  "--time-picker-border-radius": "20px",
  "--time-picker-clock-container-background": "var(--color-surface-container-highest)",
  "--time-picker-clock-item-disable-background": "#ccc",
  "--time-picker-clock-item-disable-color": "#888",
  "--time-picker-clock-item-text-color": "var(--color-inverse-surface)",
  "--time-picker-title-ampm-border": "thin solid #938F99",
  "--time-picker-title-ampm-border-radius": "8px",
  "--time-picker-title-ampm-button-active-background": "var(--color-warning-container)",
  "--time-picker-title-ampm-button-padding": "8px",
  "--time-picker-title-background": "var(--color-surface-container-high)",
  "--time-picker-title-color": "var(--color-inverse-surface)",
  "--time-picker-title-hint-color": "var(--color-on-surface-variant)",
  "--time-picker-title-inactive-opacity": "1",
  "--time-picker-title-margin-bottom": "20px",
  "--time-picker-title-padding": "20px 20px 16px",
  "--time-picker-title-time-active-background": "var(--color-primary-container)",
  "--time-picker-title-time-background": "var(--color-surface-container-highest)",
  "--time-picker-title-time-border-radius": "8px",
  "--time-picker-title-time-font-size": "40px",
  "--time-picker-title-time-padding": "8px 12px",
  "--tooltip-default-color": "var(--color-inverse-surface)",
  "--tooltip-default-text-color": "#322F35",
  "--tooltip-opacity": "1",
  "--uploader-action-background": "var(--color-surface-container-highest)",
  "--uploader-action-icon-color": "var(--color-on-surface-variant)",
  "--uploader-file-border-radius": "8px",
  "--uploader-file-cover-background": "var(--color-surface-container-highest)",
  "--uploader-file-name-background": "var(--color-surface-container-highest)",
  "--uploader-file-name-color": "var(--color-on-surface-variant)",
  "--watermark-content-color": "#ffffff",
}
`;

exports[`test md3Light theme 1`] = `
{
  "--action-sheet-action-item-color": "#1D1B20",
  "--action-sheet-background": "var(--color-surface-container-high)",
  "--action-sheet-border-radius": "0px",
  "--action-sheet-title-color": "var(--color-on-surface-variant)",
  "--avatar-background-color": "var(--color-primary)",
  "--avatar-text-color": "#fff",
  "--back-top-button-border-radius": "12px",
  "--bottom-navigation-background-color": "var(--color-surface-container)",
  "--bottom-navigation-fab-border-radius": "12px",
  "--bottom-navigation-item-active-background-color": "var(--color-info-container)",
  "--bottom-navigation-item-inactive-color": "var(--color-on-surface-variant)",
  "--breadcrumb-inactive-color": "var(--color-on-surface-variant)",
  "--button-border-radius": "100px",
  "--button-default-color": "var(--color-surface-container-low)",
  "--button-default-icon-color": "var(--color-on-info-container)",
  "--button-default-icon-container-color": "var(--color-surface-container-high)",
  "--button-default-text-color": "var(--color-primary)",
  "--card-background": "var(--color-surface-container-low)",
  "--card-border-radius": "12px",
  "--card-close-button-border-radius": "12px",
  "--card-close-button-primary-color": "var(--color-primary-container)",
  "--card-close-button-size": "56px",
  "--card-close-button-text-color": "var(--color-on-primary-container)",
  "--card-description-color": "var(--color-on-surface-variant)",
  "--card-description-margin": "32px 0 0 0",
  "--card-description-padding": "0 16px",
  "--card-footer-margin": "32px 0 0 0",
  "--card-footer-padding": "0 16px",
  "--card-image-height": "188px",
  "--card-padding": "0 0 16px 0",
  "--card-subtitle-color": "var(--color-on-surface-variant)",
  "--card-subtitle-margin": "4px 0 0 0",
  "--card-subtitle-padding": "0 16px",
  "--card-subtitle-row-margin": "4px 0 0 0",
  "--card-title-color": "#1D1B20",
  "--card-title-font-size": "16px",
  "--card-title-margin": "16px 0 0 0",
  "--card-title-padding": "0 16px",
  "--card-title-row-margin": "16px 0 0 0",
  "--cell-description-color": "var(--color-on-surface-variant)",
  "--checkbox-text-color": "var(--color-on-surface-variant)",
  "--checkbox-unchecked-color": "var(--color-on-surface-variant)",
  "--chip-default-color": "var(--color-surface-container-high)",
  "--chip-default-text-color": "#1D192B",
  "--chip-round-radius": "8px",
  "--collapse-background": "var(--color-surface-container-low)",
  "--collapse-text-color": "#1D1B20",
  "--color-body": "#fef7ff",
  "--color-danger": "#B3261E",
  "--color-danger-container": "#F9DEDC",
  "--color-info": "#625B71",
  "--color-info-container": "#E8DEF8",
  "--color-inverse-surface": "#322F35",
  "--color-on-danger": "#fff",
  "--color-on-danger-container": "#410E0B",
  "--color-on-info": "#fff",
  "--color-on-info-container": "#1D192B",
  "--color-on-primary": "#fff",
  "--color-on-primary-container": "#21005D",
  "--color-on-success": "#fff",
  "--color-on-success-container": "#151F00",
  "--color-on-surface-variant": "#49454F",
  "--color-on-warning": "#fff",
  "--color-on-warning-container": "#31111D",
  "--color-outline": "#CAC4D0",
  "--color-primary": "#6750A4",
  "--color-primary-container": "#EADDFF",
  "--color-success": "#536525",
  "--color-success-container": "#D5EC9C",
  "--color-surface-container": "#F3EDF7",
  "--color-surface-container-high": "#ECE6F0",
  "--color-surface-container-highest": "#E6E0E9",
  "--color-surface-container-low": "#F7F2FA",
  "--color-text": "#000",
  "--color-warning": "#7D5260",
  "--color-warning-container": "#FFD8E4",
  "--date-picker-actions-padding": "20px",
  "--date-picker-body-background-color": "var(--color-surface-container-high)",
  "--date-picker-body-height": "300px",
  "--date-picker-body-padding": "0 14px 16px",
  "--date-picker-border-radius": "20px",
  "--date-picker-header-arrow-filter": "opacity(1)",
  "--date-picker-header-color": "var(--color-on-surface-variant)",
  "--date-picker-header-padding": "0 0 16px",
  "--date-picker-main-color": "#1D1B20",
  "--date-picker-title-background": "var(--color-surface-container-high)",
  "--date-picker-title-color": "#1D1B20",
  "--date-picker-title-hint-color": "var(--color-on-surface-variant)",
  "--date-picker-title-padding": "20px 20px 16px",
  "--day-picker-head-item-color": "#1D1B20",
  "--dialog-actions-padding": "0 24px 24px",
  "--dialog-background": "var(--color-surface-container-high)",
  "--dialog-border-radius": "28px",
  "--dialog-button-margin-left": "8px",
  "--dialog-message-color": "var(--color-on-surface-variant)",
  "--dialog-message-padding": "16px 24px 24px",
  "--dialog-title-color": "#1D1B20",
  "--dialog-title-font-size": "20px",
  "--dialog-title-padding": "24px 24px 0",
  "--dialog-width": "312px",
  "--fab-action-border-radius": "12px",
  "--fab-action-size": "40px",
  "--fab-trigger-border-radius": "16px",
  "--field-decorator-blur-color": "#79747E",
  "--field-decorator-text-color": "#1D1B20",
  "--floating-panel-background": "var(--color-surface-container-low)",
  "--floating-panel-header-height": "36px",
  "--floating-panel-toolbar-background": "#79747E",
  "--floating-panel-toolbar-height": "4px",
  "--floating-panel-toolbar-width": "32px",
  "--hover-overlay-opacity": "0.12",
  "--link-default-color": "#000",
  "--menu-background-color": "var(--color-surface-container)",
  "--menu-border-radius": "4px",
  "--menu-option-text-color": "#1D1B20",
  "--menu-select-menu-background-color": "var(--color-surface-container)",
  "--menu-select-menu-border-radius": "4px",
  "--option-text-color": "#1D1B20",
  "--paper-background": "var(--color-surface-container-low)",
  "--picker-background": "var(--color-body)",
  "--picker-cancel-button-text-color": "var(--color-primary)",
  "--picker-mask-background-image": "linear-gradient(180deg, rgba(254, 247, 255, 0.9), rgba(254, 247, 255, 0.4)), linear-gradient(0deg, rgba(254, 247, 255, 0.9), rgba(254, 247, 255, 0.4)",
  "--popup-content-background-color": "var(--color-surface-container-high)",
  "--pull-refresh-background": "var(--color-body)",
  "--radio-text-color": "var(--color-on-surface-variant)",
  "--radio-unchecked-color": "var(--color-on-surface-variant)",
  "--rate-color": "var(--color-on-surface-variant)",
  "--result-background": "var(--color-body)",
  "--result-border-radius": "12px",
  "--result-description-color": "var(--color-on-surface-variant)",
  "--result-error-border-color": "rgba(179, 38, 30, 0.3)",
  "--result-info-border-color": "rgba(98, 91, 113, 0.3)",
  "--result-success-border-color": "rgba(83, 101, 37, 0.3)",
  "--result-title-color": "#1D1B20",
  "--result-warning-border-color": "rgba(125, 82, 96, 0.3)",
  "--select-scroller-background": "var(--color-surface-container)",
  "--select-scroller-border-radius": "4px",
  "--slider-thumb-size": "16px",
  "--slider-track-background": "var(--color-surface-container-highest)",
  "--slider-track-border-radius": "4px",
  "--slider-track-fill-border-radius": "4px",
  "--slider-track-height": "4px",
  "--snackbar-background": "var(--color-inverse-surface)",
  "--snackbar-color": "#F5EFF7",
  "--switch-handle-background": "var(--color-surface-container-low)",
  "--switch-track-background": "var(--color-surface-container-low)",
  "--tab-inactive-color": "var(--color-on-surface-variant)",
  "--table-background": "var(--color-surface-container-low)",
  "--table-tbody-tr-hover-background": "var(--color-surface-container-low)",
  "--tabs-background": "var(--color-body)",
  "--time-picker-actions-padding": "20px",
  "--time-picker-body-background": "var(--color-surface-container-high)",
  "--time-picker-border-radius": "20px",
  "--time-picker-clock-container-background": "var(--color-surface-container-highest)",
  "--time-picker-clock-item-text-color": "#1D1B20",
  "--time-picker-title-ampm-border": "thin solid #79747e",
  "--time-picker-title-ampm-border-radius": "8px",
  "--time-picker-title-ampm-button-active-background": "var(--color-warning-container)",
  "--time-picker-title-ampm-button-padding": "8px",
  "--time-picker-title-background": "var(--color-surface-container-high)",
  "--time-picker-title-color": "#1D1B20",
  "--time-picker-title-hint-color": "var(--color-on-surface-variant)",
  "--time-picker-title-inactive-opacity": "1",
  "--time-picker-title-margin-bottom": "20px",
  "--time-picker-title-padding": "20px 20px 16px",
  "--time-picker-title-time-active-background": "var(--color-primary-container)",
  "--time-picker-title-time-background": "var(--color-surface-container-highest)",
  "--time-picker-title-time-border-radius": "8px",
  "--time-picker-title-time-font-size": "40px",
  "--time-picker-title-time-padding": "8px 12px",
  "--tooltip-default-color": "var(--color-inverse-surface)",
  "--tooltip-opacity": "1",
  "--uploader-action-background": "var(--color-surface-container-low)",
  "--uploader-action-icon-color": "var(--color-on-surface-variant)",
  "--uploader-file-border-radius": "8px",
  "--uploader-file-cover-background": "var(--color-surface-container-low)",
  "--uploader-file-name-background": "var(--color-surface-container-low)",
  "--uploader-file-name-color": "var(--color-on-surface-variant)",
}
`;
